# typed-functional-python

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/common/: result.py
app/common/client_api/: convenience_store.py  japan_post.py  pub_event.py
app/common/config/: index.py  local_config.py
app/common/mock/: order_mock.py
app/common/models/: order.py
app/common/protocol/: order_protocol.py
app/common/serializer/: order.py
app/common/util/: result.py  test.py
app/common/util/deprecated /: result.py
app/data_access/: convenience_store.py  deliverly_days.py  index.py  japan_post.py  product_catalog.py
app/docs/: order_examle.py
app/endopoints/: order.py
app/integrations/: order.py
app/services/: order.py
app/workflows/: helper.py  order_workflow.py
